deshice lo que hice de muestra
durante la presentacion..
Por algun motivo me dice que estoy sacando y volviendo a agregar el tag del iframe, lo copio ac'a porlas dudas
    <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/e9DK_MNlbRw"
        title="YouTube video player" frameborder="0"
        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
        allowfullscreen></iframe>

--- a/page1.html
+++ b/page1.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Galería de la Tecnologísdfajklsdfajksfajksjkldfa</h1>
+    <h1>Galería de la Tecnología</h1>
     <img src="img1.jpg" alt="Imagen de la NASA" class="image" />
     <h2>Lorem descripción</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur minus quia fugiat quae cumque consequatur
@@ -19,8 +19,8 @@
         soluta?
     </p>
 
-    <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/e9DK_MNlbRw" title="YouTube video player"
-        frameborder="0"
+    <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/e9DK_MNlbRw"
+        title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         allowfullscreen></iframe>
     <br>
