--- a/10.1/index.html
+++ b/10.1/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Buscador de aliens V1.0</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
-    
+    <header>
+        <nav class="navbar navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="#">Busca tu Alien: </a>
+                <input id="busqueda" class="form-control me-2" type="search"
+                    placeholder="🔍 Buscar un elemento del espacio..." aria-label="Buscar">
+                <button type="button" id="buttonBusqueda">Buscar</button>
+
+            </div>
+        </nav>
+    </header>
+    <main class="container mt-4">
+        <div id="container" class="row">
+        </div>
+        <div class="text-center mt-3">
+            <button id="previousPage" class="oculto btn btn-secondary">Anterior</button>
+            <button id="nextPage" class="oculto btn btn-primary">Siguiente</button>
+        </div>
+    </main>
+    <footer class="mt-4 text-center">
+        <p>© 2023 Buscador de Aliens</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
+
 </html>
