--- a/10.1/index.html
+++ b/10.1/index.html
@@ -14,10 +14,11 @@
     <header>
         <nav class="navbar navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="#">Busca tu Alien: </a>
-                <input id="busqueda" class="form-control me-2" type="search"
-                    placeholder="🔍 Buscar un elemento del espacio..." aria-label="Buscar">
-                <button type="button" id="buttonBusqueda">Buscar</button>
+                
+                <input id="busqueda" class="form-control me-2" type="input"
+                    placeholder="Buscar un elemento del espacio ☼" aria-label="Buscar">
+                <button type="button" class="buttonBusqueda" id="buttonBusqueda">Buscar</button>
+                <button type="button" class="buttonBusqueda" id="clearBusqueda" onclick="limpiarBusqueda()">Limpiar</button>
 
             </div>
         </nav>
@@ -25,7 +26,7 @@
     <main class="container mt-4">
         <div id="container" class="row">
         </div>
-        <div class="text-center mt-3">
+        <div id="antesDespues" class="text-center mt-3">
             <button id="previousPage" class="oculto btn btn-secondary">Anterior</button>
             <button id="nextPage" class="oculto btn btn-primary">Siguiente</button>
         </div>
