--- a/11.3 buscador-de-galaxias/index.html
+++ b/11.3 buscador-de-galaxias/index.html
@@ -4,23 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscador de aliens V1.0</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <title>Buscador de aliens V2.0</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-dark bg-dark">
-            <div class="container">
-                
-                <input id="busqueda" class="form-control me-2" type="input"
-                    placeholder="Buscar un elemento del espacio ☼" aria-label="Buscar">
-                <button type="button" class="buttonBusqueda" id="buttonBusqueda">Buscar</button>
-                <button type="button" class="buttonBusqueda" id="clearBusqueda" onclick="limpiarBusqueda()">Limpiar</button>
 
+            <div class="input-group search-bar">
+
+                <input id="busqueda" class="form-control" type="input" placeholder="Buscar un elemento del espacio ☼"
+                    aria-label="Buscar">
+                <button type="button" class="buttonBusqueda btn btn-primary" id="buttonBusqueda">Buscar</button>
+                <button type="button" class="clearBusqueda btn btn-primary" id="clearBusqueda">Limpiar</button>
             </div>
+
         </nav>
     </header>
     <main class="container mt-4">
