--- a/14.1-grupal-carrito/index.html
+++ b/14.1-grupal-carrito/index.html
@@ -11,43 +11,15 @@
 </head>
 
 <body>
-    <header>
+    <h1 class="mt-5 text-center">Lista de Productos</h1>
+    <div class="p-4" id="productos-container">
+        <!-- Aquí se mostrarán los productos -->
+    </div>
 
-    </header>
+
     <div class="container">
         <main class=" mt-4">
-            <h1 class="text-center">Lista de Productos</h1>
-
-            <div id="productos-container">
-                <!-- Aquí se mostrarán los productos -->
-            </div>
-
-            <div>
-            </div>
-
-
-            <div>
-                <table class="table mt-5">
-                    <thead>
-                        <tr>
-                            <th></th>
-
-                            <th>Id</th>
-                            <th>Nombre</th>
-                            <th>Costo</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td id="nombre"></td>
-                            <td id="precio"></td>
-                            <td id="id"></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-
-            <div id="form" class="text-center">
+            <div id="form" class="mt-5 text-center">
                 <form id="miFormulario">
                     <label for="nombreCliente">Nombre del Cliente:</label><br>
                     <input type="text" id="nombreCliente" name="nombreCliente" required><br>
@@ -55,14 +27,21 @@
                     <label for="rutOpcional">¿Ingresar RUT?</label><br>
                     <input type="checkbox" id="rutOpcional" name="rutOpcional" onchange="mostrarOcultarRUT()"><br>
 
-                    <div id="inputRUT" style="display: none;"><br>
-                        <label for="rut">RUT:</label>
+                    <div id="inputRUT" style="display: none;">
+                        <label for="rut">RUT:</label><br>
                         <input type="text" id="rut" name="rut">
                     </div>
-
-                    <input type="submit" value="Enviar">
                 </form>
             </div>
+
+
+            <div id="factura">
+                <p>Nombre del cliente:</p>
+                <p>RUT:</p>
+                <p></p>
+                <p id="total"></p>
+            </div>
+
     </div>
 
 
