--- a/14.2-JAPFLIX/index.html
+++ b/14.2-JAPFLIX/index.html
@@ -20,7 +20,8 @@
                     <h1 class="fw-light"><img src="img/japflix.png" alt=""></h1>
                     <input type="search" class="form-control" name="buscar" id="inputBuscar"
                         placeholder="Ej.: The Lion King">
-                    <button class="btn btn-primary m-2" id="btnBuscar">Buscar</button>
+                    <button class="btn btn-secondary m-2" id="btnBuscar">Buscar</button>
+                    <button class="btn btn-secondary m-2" style="display: none;" id="btnLimpiar" onclick="limpiar()">Limpiar</button>
                 </div>
             </div>
         </div>
