--- a/15-carrito/index.html
+++ b/15-carrito/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
-
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
         <div class="dropdown">
@@ -21,20 +19,16 @@
                 <div id="cart" class="text-center">
                     <h2>Carrito de compras</h2>
                     <p>Sus productos elegidos</p>
+                    <table>
+                    </table>
                     <table id="cart-items">
-                        <tr class="text-center">
-                            <th>Producto</th>
-                            <th>Precio</th>
-                            <th>Eliminar</th>
-                        </tr>
                     </table>
                     <div>
                         <!-- Los items seleccionados se agregarán aquí -->
                     </div>
                     <table>
                         <tr class="text-center">
-                            <th>Total: </th>
-                            <th id="totalCart">0</th>
+                            <th>Total:<span id="totalCart">$0.00</span></th>
                         </tr>
                     </table>
                 </div>
@@ -46,22 +40,6 @@
     <div class="container">
         <div class="row" id="item-list"></div>
     </div>
-
-
-
-
-
-
-
-    <div id="carrito">
-        <!-- Aquí se mostrarán los productos agregados al carrito -->
-    </div>
-
-
-    </main>
-    </div><!-- Comentarios -->
-
-
     <!-- SCRIPTS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
