--- a/15-carrito/index.html
+++ b/15-carrito/index.html
@@ -32,7 +32,7 @@
                         </tr>
                     </table>
                     <div class="payment-options mt-3">
-                        <label for="payment-method">Método de Pago:</label>
+                        <label for="payment-method" class="mb-1">Método de Pago:</label>
                         <select id="payment-method" class="form-select">
                             <option value="debit">Débito</option>
                             <option value="cash">Efectivo</option>
