--- a/18.2-pagina/index.html
+++ b/18.2-pagina/index.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="" alt="Logo" class="img-fluid" /></a>
+            <a class="navbar-brand" href="#"><p>(>‿◠)✌</p></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -22,42 +22,21 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Productos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            View More
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Web Development</a></li>
-                            <li><a class="dropdown-item" href="#">Web Designing</a></li>
-                            <li><a class="dropdown-item" href="#">Android Development</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link active"></a>
                     </li>
                 </ul>
                 <div class="d-flex">
                     <div class="dropdown">
                         <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            Our Products
+                            Menu
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <li><a class="dropdown-item" href="#">Product One</a></li>
-                            <li><a class="dropdown-item" href="#">Product Two</a></li>
-                            <li><a class="dropdown-item" href="#">Product Three</a></li>
+                            <li><a class="dropdown-item" href="profile.html">Perfil</a></li>
+                            <li><a class="dropdown-item" href="#">Cart</a></li>
                         </ul>
                     </div>
-                    <button class="btn btn-light ms-3">Login</button>
+                    <button class="btn btn-light ms-3" onclick="irAlLogin()">Login</button>
                 </div>
             </div>
         </div>
