--- a/18.2-pagina/login.html
+++ b/18.2-pagina/login.html
@@ -5,18 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
     <main>
-        <form>
-            <input type="text" placeholder="Nombre">
-            <input type="text" placeholder="Apellido">
-            <input type="email" placeholder="Email">
-            <input type="text" placeholder="Num. Celular">
-        </form>
+        <div class="container">
+            <div class="row">
+            <div id="customAlert" class="alert alert-primary col-12 col-sm-6 col-md-4 col-lg-3" role="alert" style="margin: 100px auto;">
+                <form class="text-center m-3">
+                    <input class="w-100" id="inputNombre" type="text" placeholder="Nombre" required>
+                    <input class="w-100" id="inputApellido" type="text" placeholder="Apellido" required>
+                    <input class="w-100" id="inputEmail" type="email" placeholder="Email" required>
+                    <input class="w-100" id="inputNumeCelular" type="text" placeholder="Número de Celular" required>
+                    <button class="w-75 mt-4" id="guardarDatos">Guardar Datos</button>
+                    
+            </form>
+        </div>
+    </div>
+    </div>
     </main>
     <script src="js/init.js"></script>
+    <script src="js/login.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
