--- a/18.2-pagina/profile.html
+++ b/18.2-pagina/profile.html
@@ -7,13 +7,13 @@
     <title>Profile Page</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="/images/MarkupTag-white-logo.png" alt="Logo"
-                    class="img-fluid" /></a>
+            <a class="navbar-brand" href="#"><p>(>‿◠)✌</p></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -21,42 +21,20 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            View More
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Web Development</a></li>
-                            <li><a class="dropdown-item" href="#">Web Designing</a></li>
-                            <li><a class="dropdown-item" href="#">Android Development</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link active" href="index.html">Volver al Inicio</a>
                     </li>
                 </ul>
                 <div class="d-flex">
                     <div class="dropdown">
                         <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            Our Products
+                            Menu
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <li><a class="dropdown-item" href="#">Product One</a></li>
-                            <li><a class="dropdown-item" href="#">Product Two</a></li>
-                            <li><a class="dropdown-item" href="#">Product Three</a></li>
+                            <li><a class="dropdown-item" href="#">Cart</a></li>
                         </ul>
                     </div>
-                    <button class="btn btn-light ms-3">Login</button>
+                    <button class="btn btn-light ms-3" onclick="irAlLogin()">Login</button>
                 </div>
             </div>
         </div>
@@ -64,20 +42,16 @@
     <main>
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <img src="https://placehold.it/150x150" alt="Profile Photo" class="img-rounded">
-                </div>
-                <div class="col-md-8">
-                    <h1>Nombre Apellido</h1>
-                    <ul class="list-group">
-                        <li class="list-group-item">Teléfono: 123456789</li>
-                        <li class="list-group-item">Email: nombre.apellido@example.com</li>
-                    </ul>
+                <div id="datosProfile" class="col-12 col-sm-6 col-md-4 col-lg-6 mt-5" style="margin: 0 auto;">
                 </div>
             </div>
         </div>
 
         <script src="js/init.js"></script>
+        <script src="js/profile.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
