--- a/18.2-pagina/index.html
+++ b/18.2-pagina/index.html
@@ -8,13 +8,13 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
 
-    <title>¿A donde vamos?</title>
+    <title>¿where do you want to go??</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
         <div class="container">
-            <a class="navbar-brand" href="#"><p>(>‿◠)✌</p></a>
+            <a class="navbar-brand" href="#"><p>Find your travel (>‿◠)✌</p></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -26,17 +26,7 @@
                     </li>
                 </ul>
                 <div class="d-flex">
-                    <div class="dropdown">
-                        <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Menu
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <li><a class="dropdown-item" href="profile.html">Perfil</a></li>
-                            <li><a class="dropdown-item" href="#">Cart</a></li>
-                        </ul>
-                    </div>
-                    <button class="btn btn-light ms-3" onclick="irAlLogin()">Login</button>
+                    <button class="btn btn-light ms-3 btnlogin"></button>
                 </div>
             </div>
         </div>
