--- a/18.2-pagina/login.html
+++ b/18.2-pagina/login.html
@@ -7,30 +7,32 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <main>
         <div class="container">
             <div class="row">
-            <div id="customAlert" class="alert alert-primary col-12 col-sm-6 col-md-4 col-lg-3" role="alert" style="margin: 100px auto;">
+            <div id="customAlert" class="alert alert-primary col-12 col-sm-6 col-md-4 col-lg-3" role="alert" style="margin: 150px auto;">
                 <form class="text-center m-3">
-                    <input class="w-100" id="inputNombre" type="text" placeholder="Nombre" required>
-                    <input class="w-100" id="inputApellido" type="text" placeholder="Apellido" required>
-                    <input class="w-100" id="inputEmail" type="email" placeholder="Email" required>
-                    <input class="w-100" id="inputNumeCelular" type="text" placeholder="Número de Celular" required>
-                    <button class="w-75 mt-4" id="guardarDatos">Guardar Datos</button>
+                    <h2>Log-in</h2>
+                    <input class="w-100" id="inputNombre" type="text" placeholder="Nombre">
+                    <input class="w-100" id="inputApellido" type="text" placeholder="Apellido">
+                    <input class="w-100" id="inputEmail" type="email" placeholder="Email">
+                    <input class="w-100" id="inputNumeCelular" type="number" placeholder="Número de Celular">
+                    <button type="submit" class="w-75 mt-4 btn btn-primary" id="guardarDatos" onclick="guardarValoresEnLocalStorage()">Submit</button>
                     
             </form>
         </div>
     </div>
     </div>
     </main>
-    <script src="js/init.js"></script>
     <script src="js/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
