--- a/18.2-pagina/profile.html
+++ b/18.2-pagina/profile.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
         <div class="container">
-            <a class="navbar-brand" href="#"><p>(>‿◠)✌</p></a>
+            <a class="navbar-brand" href="#"><p>Your Profile (>‿◠)✌</p></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -21,20 +21,11 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Volver al Inicio</a>
+                        <a class="nav-link active"></a>
                     </li>
                 </ul>
                 <div class="d-flex">
-                    <div class="dropdown">
-                        <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Menu
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <li><a class="dropdown-item" href="#">Cart</a></li>
-                        </ul>
-                    </div>
-                    <button class="btn btn-light ms-3" onclick="irAlLogin()">Login</button>
+                    <button class="btn btn-light ms-3 btnlogin"></button>
                 </div>
             </div>
         </div>
@@ -46,6 +37,7 @@
                 </div>
             </div>
         </div>
+        <p class="text-center m-5">To come back to the init click <a class="link active" href="index.html">here</a></p>
 
         <script src="js/init.js"></script>
         <script src="js/profile.js"></script>
