--- a/18.2-pagina/login.html
+++ b/18.2-pagina/login.html
@@ -21,7 +21,7 @@
                     <input class="w-100" id="inputApellido" type="text" placeholder="Apellido">
                     <input class="w-100" id="inputEmail" type="email" placeholder="Email">
                     <input class="w-100" id="inputNumeCelular" type="number" placeholder="Número de Celular">
-                    <button type="submit" class="w-75 mt-4 btn btn-primary" id="guardarDatos" onclick="guardarValoresEnLocalStorage()">Submit</button>
+                    <button type="submit" class="w-75 mt-4 btn btn-primary" id="guardarDatos">Submit</button>
                     
             </form>
         </div>
@@ -32,7 +32,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
