--- a/18.2-pagina/index.html
+++ b/18.2-pagina/index.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
         <div class="container">
-            <a class="navbar-brand" href="#"><p>Find your travel (>‿◠)✌</p></a>
+            <a class="navbar-brand mt-2" href="#"><p>Find your travel (>‿◠)✌</p></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -38,7 +38,7 @@
         </div>
     </main>
     <!-- SCRIPTS -->
-
+    <footer class="bg-danger text-white text-center p-1 mt-5"><p class="mt-3">&copy; 2023 Traveling. all the rights reserved.</p></footer>
     <script src="js/index.js"></script>
     <script src="js/init.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
