--- a/18.2-pagina/info-products.html
+++ b/18.2-pagina/info-products.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
         <div class="container">
-            <a class="navbar-brand" href="#"><p>Trip information (>‿◠)✌</p></a>
+            <a class="navbar-brand mt-2" href="#"><p>Trip information (>‿◠)✌</p></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -44,6 +44,7 @@
         </div>
         <p class="text-center m-5">To come back to de init click <a class="link active" href="index.html">here</a></p>
     </main>
+    <footer class="bg-danger text-white text-center p-1 mt-5"><p class="mt-3">&copy; 2023 Traveling. all the rights reserved.</p></footer>
     <script src="js/info-products.js"></script>
     <script src="js/init.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
