--- a/18.2.1-backend/public/index.html
+++ b/18.2.1-backend/public/index.html
@@ -34,7 +34,7 @@
                                 required>
                             <input type="text" id="inputPostApellido" class="form-control my-1" placeholder="Apellido"
                                 required>
-                            <button id="btnPost" class="btn btn-success position-absolute bottom-0 mb-3">
+                            <button id="btnPost" class="btn btn-success position-absolute bottom-0 mb-3" disabled>
                                 Agregar</button>
                         </div>
                     </div>
@@ -46,7 +46,7 @@
                             <input type="number" id="inputPutId" class="form-control"
                                 placeholder="ID del registro a modificar">
                             <button id="btnPut" class="btn btn-warning position-absolute bottom-0 mb-3"
-                                data-bs-toggle="modal" data-bs-target="#dataModal">
+                                data-bs-toggle="modal" data-bs-target="#dataModal" disabled>
                                 Modificar</button>
                         </div>
                     </div>
@@ -54,7 +54,7 @@
                         <div class="border p-3 my-3 position-relative" id="delete-box">
                             <h6>Eliminar registro</h6>
                             <input type="number" id="inputDelete" class="form-control" placeholder="ID a eliminar">
-                            <button id="btnDelete" class="btn btn-danger position-absolute bottom-0 mb-3">
+                            <button id="btnDelete" class="btn btn-danger position-absolute bottom-0 mb-3" disabled>
                                 Borrar</button>
                         </div>
                     </div>
@@ -84,7 +84,8 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-primary" id="btnSendChanges">Guardar</button>
+                    <button type="button" class="btn btn-primary" id="btnSendChanges"
+                        data-bs-dismiss="modal">Guardar</button>
                 </div>
             </div>
         </div>
